fix: complete production readiness hardening